tests/baselines/reference/nonPrimitiveAccessProperty.errors.txt
tests/cases/conformance/types/nonPrimitive/nonPrimitiveAccessProperty.ts(3,3): error TS2339: Property 'nonExist' does not exist on type 'object'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveAccessProperty.ts(5,7): error TS2459: Type 'object' has no property 'destructuring' and no string index signature.


==== tests/cases/conformance/types/nonPrimitive/nonPrimitiveAccessProperty.ts (2 errors) ====
    var a: object;
    a.toString();
    a.nonExist(); // error
      ~~~~~~~~
!!! error TS2339: Property 'nonExist' does not exist on type 'object'.
    
    var { destructuring } = a; // error
          ~~~~~~~~~~~~~
!!! error TS2459: Type 'object' has no property 'destructuring' and no string index signature.
    var { ...rest } = a; // ok
    